# Ka-Radio32

./: .gitignore  CMakeLists.txt  HardwareConfig.md  HardwareConfig.txt  Interface.md  Interface.txt  Makefile  README.md  README.md.old  bug.txt  crash.txt  dbg.bat  dbg.sh  dbg.sh~  esplay.md  extensions.html  generate.bat  generate.sh  generate.sh~  index.html  index.php  infos.html  ka-radio.sh  lolin32pro.csv  max_ed_part1.csv  nvs_partition_generator.sh  partitions.csv  pattern.csv  playlists.sh  sdkconfig  sdkconfig.3.3  sdkconfig.4  sdkconfig.defaults  sdkconfig.new  sdkconfig.old  sockets.h  standard_adb.csv  test.csv  ttgo.csv  updateidf.sh  (+3 more)
components/fdk-aac-oreo-m8/: CMakeLists.txt
components/fdk-aac-oreo-m8/libAACdec/include/: aacdecoder_lib.h
components/fdk-aac-oreo-m8/libAACdec/src/: aacdec_hcrs.cpp  aacdecoder.cpp  aacdecoder_lib.cpp  block.cpp  rvlcconceal.cpp
components/fdk-aac-oreo-m8/libAACenc/src/: aacenc.cpp  aacenc_lib.cpp
components/fdk-aac-oreo-m8/libFDK/include/: FDK_archdef.h  abs.h  clz.h  fft.h  fixmul.h
components/fdk-aac-oreo-m8/libFDK/include/xtensa/: abs_xtensa.h
components/fdk-aac-oreo-m8/libFDK/src/: fft.cpp
components/fdk-aac-oreo-m8/libMpegTPDec/include/: tpdec_lib.h
components/fdk-aac-oreo-m8/libMpegTPDec/src/: tpdec_adts.cpp  tpdec_asc.cpp  tpdec_latm.cpp  tpdec_lib.cpp
components/fdk-aac-oreo-m8/libPCMutils/src/: pcmutils_lib.cpp
components/fdk-aac-oreo-m8/libSBRdec/src/: psdec.cpp  sbr_crc.cpp  sbrdecoder.cpp
components/fdk-aac-oreo-m8/libSBRenc/src/: mh_det.cpp
components/fdk-aac-oreo-m8/libSYS/include/: genericStds.h  machine_type.h
components/fdk-aac-oreo-m8/libSYS/src/: genericStds.cpp  wav_file.cpp
components/mad/: CMakeLists.txt  align.c  align.h  bit.c  layer3.c
components/ucglib/: CMakeLists.txt  ChangeLog  Makefile.am  README.md  component.mk  configure.ac  license.txt
components/ucglib/cppsrc/: Ucglib.cpp  Ucglib.h
components/ucglib/cppsrc_sdspi/: Ucglib.cpp  Ucglib.h  copyright.txt
components/ucglib/csrc/: CMakeLists.txt  ucg.h  ucg_dev_ic_ili9325.c  ucg_dev_ic_ili9325_spi.c  ucg_dev_ic_ili9341.c  ucg_dev_ic_st7735.c  ucg_dev_ic_st7735L.c  ucg_dev_ic_st7735S.c  ucg_dev_ic_st7735W.c  ucg_dev_ic_st7735W2.cold  ucg_dev_ic_st7789.c  ucg_dev_ic_st7789_240x240.c  ucg_dev_oled_128x128_univision.c  ucg_dev_tft_128x128_st7735.c  ucg_dev_tft_128x160_W_st7735.c  ucg_dev_tft_132x132_pcf8833.c  ucg_dev_tft_135x240_st7789.c  ucg_dev_tft_240x240_st7789.c  ucg_dev_tft_240x320_st7789.c  ucg_dev_tft_80x160_st7735.c  ucg_esp32_hal.c  ucg_esp32_hal.c.opti  ucg_esp32_hal.h  ucg_karadio32_fonts.c  ucg_karadio32_fonts.h  ucg_scale.c
components/ucglib/sys/arduino/Box3D/: Box3D.ino
components/ucglib/sys/arduino/ClipTest/: ClipTest.ino
components/ucglib/sys/arduino/FPS/: FPS.ino  Makefile.sdspi.152.due
components/ucglib/sys/arduino/GraphicsTest/: GraphicsTest.ino  Makefile.152.due
components/ucglib/sys/arduino/HelloWorld/: HelloWorld.ino
components/ucglib/sys/arduino/HowToUseFonts/: HowToUseFonts.ino  Makefile.105.uno
components/ucglib/sys/arduino/PowerDown/: PowerDown.ino
components/ucglib/sys/arduino/Scale/: Scale.ino
components/ucglib/sys/arduino/ShowTGA/: Makefile.105.uno  ShowTGA.ino
components/ucglib/sys/arduino/UcgLogo/: Makefile.105.Duemilanove  Makefile.105.mega  Makefile.105.uno  UcgLogo.ino
components/ucglib/sys/arduino/issue_30/: issue_30.ino
components/ucglib/sys/arduino/sw_spi_test/: test.ino
components/ucglib/sys/arduino/test/: Makefile.105.uno  test.ino
components/ucglib/sys/sdl/dev/: ucg_dev_sdl.c
components/ucglib/sys/sdl/show_tga/: main.c
components/ucglib/sys/sdl/test/: main.c
components/ucglib/sys/sdl/test_disk/: main.c
components/ucglib/sys/sdl/test_font/: main.c
components/ucglib/sys/sdl/test_font_rotate/: main.c
components/ucglib/sys/sdl/test_rotate/: main.c
components/ucglib/sys/sdl/test_scale/: main.c
components/ucglib/sys/sdl/ucglib_logo/: Makefile  main.c
components/ucglib/sys/stdout/com/: Makefile  main.c
components/ucglib/sys/tga/dev/: ucg_dev_tga.c
components/ucglib/sys/tga/examples/: main.c
components/ucglib/sys/tga/font_array/: Makefile  main.c
components/ucglib/sys/tga/font_overview/: Makefile  do_ttf.sh  main.c
components/ucglib/sys/tga/test/: Makefile  main.c
components/ucglib/tools/font/Fony-wip/: bugreport.txt
components/ucglib/tools/font/bdf/: amstrad_cpc_license.txt  ucgtest.c  win_5x7_gr.bdf  win_6x13_gr.bdf  win_9x15_gr.bdf  win_9x16_gr.bdf  win_helvR12_gr.bdf  win_helvR14_1_gr.bdf  win_helvR14_gr.bdf  win_helvR18_g.bdf  win_helvR18_gr.bdf  win_helvR24_gr.bdf  win_ncenR12_gr.bdf  win_ncenR14_gr.bdf  win_ncenR24_gr.bdf
components/ucglib/tools/font/bdf2ucg/: Makefile  bdf2ucg.c  win_crox1c.c  win_crox1cb.c  win_crox1h.c  win_crox1hb.c  win_crox1t.c  win_crox1tb.c  win_crox2c.c  win_crox2cb.c  win_crox2h.c  win_crox2hb.c  win_crox2t.c  win_crox2tb.c  win_crox3c.c  win_crox3cb.c  win_crox3h.c  win_crox3hb.c  win_crox3t.c  win_crox3tb.c  win_crox4h.c  win_crox4hb.c  win_crox4t.c  win_crox4tb.c  win_crox5h.c  win_crox5hb.c  win_crox5t.c  win_crox5tb.c
components/ucglib/tools/font/bdf2ucg_obsolete/: Makefile  bdf_font.c  bdf_font.h  bdf_glyph.c  bdf_glyph.h  bdf_map.c  bdf_parser.c  bdf_rle.c  bdf_tga.c  main.c
components/ucglib/tools/font/bdfconv/: 0  0-255  32'  bdf_8x8.s  bdf_font.s  bdf_glyph.s  bdf_map.s  bdf_parser.s  bdf_rle.s  bdf_tga.s  fd.c  fd.s  main.s  ucg_font_5x7_tf.c  win_crox3c.c
components/ucglib/tools/font/karadio32/: ucg_font_5x7_gr.c  ucg_font_6x13_gr.c  ucg_font_9x15_gr.c  ucg_font_9x16_gr.c  ucg_font_crox1c.c  ucg_font_crox1cb.c  ucg_font_crox1h.c  ucg_font_crox1hb.c  ucg_font_crox1t.c  ucg_font_crox1tb.c  ucg_font_crox2c.c  ucg_font_crox2cb.c  ucg_font_crox2h.c  ucg_font_crox2hb.c  ucg_font_crox2t.c  ucg_font_crox2tb.c  ucg_font_crox3c.c  ucg_font_crox3cb.c  ucg_font_crox3h.c  ucg_font_crox3hb.c  ucg_font_crox3t.c  ucg_font_crox3tb.c  ucg_font_crox4h.c  ucg_font_crox4hb.c  ucg_font_crox4t.c  (+14 more)
components/ucglib/tools/linear/: linear.c
components/ucglib/tools/release/: print_release.sh
main/: ntp.c  (+50 more)
(+302 files in other folders)
