idf_component_register(SRCS 
							"libAACdec/src/aac_rom.cpp"
							"libAACdec/src/aacdecoder.cpp"
							"libAACdec/src/aacdecoder_lib.cpp"
							"libAACdec/src/aacdec_tns.cpp"
							"libAACdec/src/aacdec_drc.cpp"
							"libAACdec/src/aacdec_hcr.cpp"
							"libAACdec/src/aacdec_hcrs.cpp"
							"libAACdec/src/aacdec_hcr_bit.cpp"
							"libAACdec/src/aacdec_pns.cpp"
							"libAACdec/src/rvlc.cpp"
							"libAACdec/src/rvlcbit.cpp"
							"libAACdec/src/rvlcconceal.cpp"
							"libAACdec/src/stereo.cpp"
							"libAACdec/src/aac_ram.cpp"
							"libAACdec/src/block.cpp"
							"libAACdec/src/conceal.cpp"
							"libAACdec/src/channel.cpp"
							"libAACdec/src/channelinfo.cpp"
							"libAACdec/src/pulsedata.cpp"
							"libAACdec/src/ldfiltbank.cpp"
							"libPCMutils/src/limiter.cpp"
							"libFDK/src/fixpoint_math.cpp"
							"libSYS/src/genericStds.cpp"
							"libMpegTPDec/src/tpdec_lib.cpp"
							"libFDK/src/FDK_bitbuffer.cpp"
							"libFDK/src/FDK_tools_rom.cpp"
							"libFDK/src/FDK_crc.cpp"
							"libFDK/src/dct.cpp"
							"libFDK/src/mdct.cpp"
							"libFDK/src/fft.cpp"
							"libFDK/src/fft_rad2.cpp"
							"libFDK/src/autocorr2nd.cpp"
							"libFDK/src/dct.cpp"
							"libFDK/src/FDK_bitbuffer.cpp"
							"libFDK/src/FDK_core.cpp"
							"libFDK/src/FDK_hybrid.cpp"
							"libFDK/src/FDK_tools_rom.cpp"
							"libFDK/src/FDK_trigFcts.cpp"
							"libFDK/src/fft.cpp"
							"libFDK/src/fft_rad2.cpp"
							"libFDK/src/fixpoint_math.cpp"
							"libFDK/src/mdct.cpp"
							"libFDK/src/qmf.cpp"
							"libFDK/src/scale.cpp"
							"libPCMutils/src/limiter.cpp"
							"libPCMutils/src/pcmutils_lib.cpp"
							"libMpegTPDec/src/tpdec_asc.cpp"
							"libSBRdec/src/env_calc.cpp"
							"libSBRdec/src/env_dec.cpp"
							"libSBRdec/src/env_extr.cpp"
							"libSBRdec/src/huff_dec.cpp"
							"libSBRdec/src/lpp_tran.cpp"
							"libSBRdec/src/psbitdec.cpp"
							"libSBRdec/src/psdec.cpp"
							"libSBRdec/src/psdec_hybrid.cpp"
							"libSBRdec/src/sbrdecoder.cpp"
							"libSBRdec/src/sbrdec_drc.cpp"
							"libSBRdec/src/sbrdec_freq_sca.cpp"
							"libSBRdec/src/sbr_crc.cpp"
							"libSBRdec/src/sbr_deb.cpp"
							"libSBRdec/src/sbr_dec.cpp"
							"libSBRdec/src/sbr_ram.cpp"
							"libSBRdec/src/sbr_rom.cpp"
							"libMpegTPDec/src/tpdec_adif.cpp"
							"libMpegTPDec/src/tpdec_adts.cpp"
							"libMpegTPDec/src/tpdec_drm.cpp"
							"libMpegTPDec/src/tpdec_latm.cpp"
							"libMpegTPDec/src/tpdec_lib.cpp"
					INCLUDE_DIRS 
							"libAACdec/include/"
							"libFDK/include"
							"libSBRdec/include/"
							"libPCMutils/include/"
							"libSYS/include/"
							"libMpegTPDec/include/"
					)
component_compile_options(-Wno-error=unused-label -Wno-error=return-type -Wno-error=missing-braces 
-Wno-error=pointer-sign -Wno-error=parentheses -Wno-error=maybe-uninitialized )