idf_component_register(SRCS 
	"csrc/ucg_bitmap.c"
	"csrc/ucg_box.c"
	"csrc/ucg_ccs.c"
	"csrc/ucg_circle.c"
	"csrc/ucg_clip.c"
	"csrc/ucg_com_msg_api.c"
	"csrc/ucg_dev_default_cb.c"
	"csrc/ucg_dev_ic_ili9163.c"
	"csrc/ucg_dev_ic_ili9325.c"
	"csrc/ucg_dev_ic_ili9325_spi.c"
	"csrc/ucg_dev_ic_ili9341.c"
	"csrc/ucg_dev_ic_ld50t6160.c"
	"csrc/ucg_dev_ic_pcf8833.c"
	"csrc/ucg_dev_ic_seps225.c"
	"csrc/ucg_dev_ic_ssd1289.c"
	"csrc/ucg_dev_ic_ssd1331.c"
	"csrc/ucg_dev_ic_ssd1351.c"
	"csrc/ucg_dev_ic_st7735.c"
	"csrc/ucg_dev_ic_st7735L.c"
	"csrc/ucg_dev_ic_st7735S.c"
	"csrc/ucg_dev_ic_st7735W.c"
	"csrc/ucg_dev_ic_st7789.c"
	"csrc/ucg_dev_ic_st7789_240x240.c"
	"csrc/ucg_dev_msg_api.c"
	"csrc/ucg_dev_oled_128x128_ft.c"
	"csrc/ucg_dev_oled_128x128_ilsoft.c"
	"csrc/ucg_dev_oled_128x128_univision.c"
	"csrc/ucg_dev_oled_160x128_samsung.c"
	"csrc/ucg_dev_oled_96x64_univision.c"
	"csrc/ucg_dev_tft_128x128_ili9163.c"
	"csrc/ucg_dev_tft_128x128_st7735.c"
	"csrc/ucg_dev_tft_128x160_st7735.c"
	"csrc/ucg_dev_tft_128x160_W_st7735.c"
	"csrc/ucg_dev_tft_132x132_pcf8833.c"
	"csrc/ucg_dev_tft_135x240_st7789.c"
	"csrc/ucg_dev_tft_240x240_st7789.c"
	"csrc/ucg_dev_tft_240x320_ili9325_spi.c"
	"csrc/ucg_dev_tft_240x320_ili9341.c"
	"csrc/ucg_dev_tft_240x320_itdb02.c"
	"csrc/ucg_dev_tft_240x320_ssd1289.c"
	"csrc/ucg_dev_tft_240x320_st7789.c"
	"csrc/ucg_dev_tft_80x160_st7735.c"
	"csrc/ucg_esp32_hal.c"
	"csrc/ucg_font.c"
	"csrc/ucg_init.c"
	"csrc/ucg_karadio32_fonts.c"
	"csrc/ucg_line.c"
	"csrc/ucg_pixel.c"
	"csrc/ucg_pixel_font_data.c"
	"csrc/ucg_polygon.c"
	"csrc/ucg_rotate.c"
	"csrc/ucg_scale.c"
	"csrc/ucg_vector_font_data.c"
                    INCLUDE_DIRS "csrc"				
					PRIV_REQUIRES main
					)
