idf_component_register(SRCS 
						"ucg_bitmap.c"
						"ucg_box.c"
						"ucg_ccs.c"
"ucg_circle.c"
"ucg_clip.c"
"ucg_com_msg_api.c"
"ucg_dev_default_cb.c"
"ucg_dev_ic_ili9163.c"
"ucg_dev_ic_ili9325.c"
"ucg_dev_ic_ili9325_spi.c"
"ucg_dev_ic_ili9341.c"
"ucg_dev_ic_ld50t6160.c"
"ucg_dev_ic_pcf8833.c"
"ucg_dev_ic_seps225.c"
"ucg_dev_ic_ssd1289.c"
"ucg_dev_ic_ssd1331.c"
"ucg_dev_ic_ssd1351.c"
"ucg_dev_ic_st7735.c"
"ucg_dev_ic_st7735L.c"
"ucg_dev_ic_st7735S.c"
"ucg_dev_ic_st7735W.c"
"ucg_dev_ic_st7789.c"
"ucg_dev_ic_st7789_240x240.c"
"ucg_dev_msg_api.c"
"ucg_dev_oled_128x128_ft.c"
"ucg_dev_oled_128x128_ilsoft.c"
"ucg_dev_oled_128x128_univision.c"
"ucg_dev_oled_160x128_samsung.c"
"ucg_dev_oled_96x64_univision.c"
"ucg_dev_tft_128x128_ili9163.c"
"ucg_dev_tft_128x128_st7735.c"
"ucg_dev_tft_128x160_st7735.c"
"ucg_dev_tft_128x160_W_st7735.c"
"ucg_dev_tft_132x132_pcf8833.c"
"ucg_dev_tft_240x240_st7789.c"
"ucg_dev_tft_240x320_ili9325_spi.c"
"ucg_dev_tft_240x320_ili9341.c"
"ucg_dev_tft_240x320_itdb02.c"
"ucg_dev_tft_240x320_ssd1289.c"
"ucg_dev_tft_240x320_st7789.c"
"ucg_dev_tft_80x160_st7735.c"
"ucg_esp32_hal.c"
"ucg_esp32_hal.h"
"ucg_font.c"
"ucg_init.c"
"ucg_karadio32_fonts.c"
"ucg_karadio32_fonts.h"
"ucg_line.c"
"ucg_pixel.c"
"ucg_pixel_font_data.c"
"ucg_polygon.c"
"ucg_rotate.c"
"ucg_scale.c"
"ucg_vector_font_data.c")
				